@@ -1,5 +1,11 @@
 2006-03-20  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* lily/mark-engraver.cc: remove properties.
+
+	* scm/define-context-properties.scm
+	(all-user-translation-properties): remove align symbol properties
+	for barnumber/reh. mark.
+
 	* lily/break-align-interface.cc (self_align_callback): new
 	interface, new function. Look at complete alignment. This handles
 	tunable break alignments in case break-align-symbols are missing.
